--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,2 @@
-/.publish
-# Created by .gitignore support plugin (hsz.mobi)
-.idea
-.publish
-build/lib
-build/web
+build
 node_modules
-packages
-tools/compiler.jar
-web/packages
-web/src
-web/frameworks/js-bindings
-web/frameworks/runtime-src
-web/frameworks/cocos2d-x
