--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,18 +9,18 @@
         "-v",
         "--disable-warnings",
         "--vapidir=./vapi",
-        "--pkg", "glib-2.0",
-        "--pkg", "gobject-2.0",
-        "--pkg", "gee-0.8",
-        "--pkg",  "sdl2",
-        "--pkg", "SDL2_gfx",
-        "--pkg", "SDL2_image",
-        "--pkg", "SDL2_ttf",
-        "-X", "-lm",
-        "-X", "-lSDL_gfx",
-        "-X", "-w",
-        "-X", "-I/usr/include/SDL2",
-        "-o", "build/shmupwarz",
+        "--pkg",    "glib-2.0",
+        "--pkg",    "gobject-2.0",
+        "--pkg",    "gee-0.8",
+        "--pkg",    "sdl2",
+        "--pkg",    "SDL2_gfx",
+        "--pkg",    "SDL2_image",
+        "--pkg",    "SDL2_ttf",
+        "-X",       "-lm",
+        "-X",       "-lSDL_gfx",
+        "-X",       "-w",
+        "-X",       "-I/usr/include/SDL2",
+        "-o",       "build/shmupwarz",
         "src/DarkMatter.vala",
         "src/Utils/UUID.vala",
         "src/Bosco/Bag.gs",
@@ -34,8 +34,7 @@
         "src/Bosco/Interfaces/IComponent.vala",
         "src/Bosco/Interfaces/ISystem.vala",
         "src/Bosco/Interfaces/IMatcher.vala",
-        "src/Bosco/ECS/Exception.gs",
-        "src/Bosco/ECS/EntityBase.vala",
+        "src/Bosco/ECS/EntityBase.gs",
         "gen/Entity.gs",
         "src/Bosco/ECS/Group.gs",
         "gen/Matching.gs",
