--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Warriors-Of-Nim",
+  "name": "ShmupWars-Vala",
   "version": "0.0.1",
   "description": "Demo Vala Game",
   "main": "index.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/darkoverlordofdata/game-foo.git"
+    "url": "https://github.com/darkoverlordofdata/shmupwarz-vala"
   },
   "author": "darkoverlordofdata",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/darkoverlordofdata/game-foo/issues"
+    "url": "https://github.com/darkoverlordofdata/shmupwarz-vala/issues"
   },
-  "homepage": "https://github.com/darkoverlordofdata/game-foo#readme",
+  "homepage": "https://github.com/darkoverlordofdata/shmupwarz-vala",
   "devDependencies": {
     "entitas-cli": "^0.1.0"
   }
