--- a/.vscode/tasks.windows.json
+++ b/.vscode/tasks.windows.json
@@ -12,13 +12,13 @@
         "--pkg",    "gobject-2.0",
         "--pkg",    "gee-0.8",
         "--pkg",    "sdl2",
-        "--pkg",    "sdl2-gfx",
         "--pkg",    "sdl2-image",
         "--pkg",    "sdl2-ttf",
         "--pkg",    "sdl2-mixer",
         "-X",       "-w",
         "-X",       "-lSDL2_ttf",
         "-X",       "-lSDL2_image",
+        "-X",       "-lSDL2_mixer",
         "-o",       "build/shmupwarz.exe",
         "src/DarkMatter.vala",
         "src/Utils/UUID.vala",
